--- a/app/competitiveAnalysis/competitiveAnalysis.component.html
+++ b/app/competitiveAnalysis/competitiveAnalysis.component.html
@@ -71,7 +71,7 @@
                                         As part of ENCORE program for Sanofi, ArborSys developed solution of Structured Authoring and automated publishing for clinical 
 										and CMC documentation processes. 
 										</td>
-										</td>
+										
 										<td>
 										NA
 										</td>
@@ -137,4 +137,10 @@
                                 		
                                 </tbody>
                             </table>
+</div>
+</div>
+
+</div>
+</div>
+</div>
 </div>
