--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,47 +1,56 @@
 <header>
-        <div class="container-fluid bgblack">
-            <div class="container p0 m0">
-                <div class="row mainHeader m0">
-                    <div class="col-md-12 p0 m0">
-                        <div class="col-md-9 p0 m0">
-                            <div class="navbar-logo">
-                                <a href="">
-                                    <img src="images/logo-accel-bar.blk@3x.png" height="100"  />
-                                </a>
-                            </div>
-							<div class="navbar-logo">
-                                <h2 class="infoTitle">Digital Clinical Protocol</h2>
-                            </div>
-                         </div>	
+    <div class="container-fluid bgblack">
+        <div class="container p0 m0">
+            <div class="row mainHeader m0">
+                <div class="col-md-12 p0 m0">
+                    <div class="col-md-9 p0 m0">
+                        <div class="navbar-logo">
+                            <a href="">
+                                <img src="images/logo-accel-bar.blk@3x.png" height="100" />
+                            </a>
+                        </div>
+                        <div class="navbar-logo">
+                            <h2 class="infoTitle">Digital Clinical Protocol</h2>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
 
-<!-- menu -->       
-	   <div class="container-fluid pd10">
-            <div class="row m0">
-                <div class="col-md-12 p0">
-                    <div class="menu col-md-10 p0">
-                        <ul>
-                            <li><a href="home.html"  class="active"><span>Home</span></a>
-                            </li>
-							 <li><a href="glossary.html"><span>Glossary</span></a>
-                            </li>
-                            <li><a href="competition.html"><span>Competitive Analysis</span></a>
-                            </li>
-							<li><a href="links.html"><span>Links</span></a>
-                            </li>
-                            
-                        </ul>
-                    </div>
-
-                    `	
-
+    <!-- menu -->
+    <div class="container-fluid pd10">
+        <div class="row m0">
+            <div class="col-md-12 p0">
+                <div class="menu col-md-10 p0">
+                    <ul>
+                        <li><a routerLink="" routerLinkActive="active">Home</a>
+                        </li>
+                        <li><a routerLink="/Glossary" routerLinkActive="active">Glossary</a>
+                        </li>
+                        <li><a routerLink="/CompetitiveAnalysis" routerLinkActive="active">Competitive Analysis</a>
+                        </li>
+                        <li><a routerLink="/Link" routerLinkActive="active">Links</a>
+                        </li>
+                    </ul>
                 </div>
-            </div>
 
+            </div>
         </div>
-	<!-- here header ends -->	
-    </header>
+
+    </div>
+    <!-- here header ends -->
+</header>
+<router-outlet></router-outlet>
+<h2 class="title"><i class="icons bacisDetailsIcon"></i> Lean Business Canvas</h2>
+<img id="myImg" src="images/LBC1.jpg" height="500" width="1200" />
+<div id="myModal" class="modal">
+
+    <!-- The Close Button -->
+    <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+
+    <!-- Modal Content (The Image) -->
+    <img id="img01">
+
+</div>
